# rma-kinetics-rs

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  flake.nix  mkdocs.yml  pyproject.toml
.github/workflows/: py-release.yml  rust-release.yml
.zed/: settings.json
crates/rma-kinetics/: Cargo.toml
crates/rma-kinetics-derive/: Cargo.toml
crates/rma-kinetics-derive/src/: lib.rs
crates/rma-kinetics/src/: inference.rs  lib.rs  pk.rs  solve.rs
crates/rma-kinetics/src/models/: chemogenetic.rs  cno.rs  constitutive.rs  dox.rs  erasable.rs  mod.rs  oscillation.rs  tetoff.rs
crates/rma-kinetics/src/models/chemogenetic/: erasable.rs  inference.rs  mod.rs
crates/rma-kinetics/src/models/constitutive/: erasable.rs  inference.rs  mod.rs  stochastic.rs
crates/rma-kinetics/src/models/oscillation/: mod.rs  stochastic.rs
docs/: index.md
docs/inference/: index.md
docs/models/: chemogenetic.md  cno.md  constitutive.md  dox.md  index.md  tetoff.md
docs/rust/: index.md
docs/solution/: index.md
docs/solvers/: index.md
notebooks/: chemogenetic.py  cno-pk.py  constitutive.py  constitutive_erasable.py  constitutive_fit.py  constitutive_fit_eval.py  dox-pk.py  erasable_fit_eval.py  erasable_sensitivity.py  stochastic_oscillating.py  temporal-resolution.py  temporal_resolution.py  tetoff.py  utils.py
notebooks/data/chemogenetic/: parameter_summary.csv  pop_brain_clz.npy  pop_brain_clz_hdi.npy  pop_brain_cno.npy  pop_brain_cno_hdi.npy  pop_tta.npy  (+6 more)
python/rma_kinetics/: __init__.py  _rma_kinetics.pyi  rma_kinetics.pyi  solvers.py
python/tests/: test_all.py
(+33 files in other folders)
