[package]
name = "rma-kinetics-derive"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[features]
py = []
